2004-07-22 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, modules/resistor.cc, modules/resistor.h:
	Bug fixes to the recent I/O pin redesign
	
2004-07-22 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/breakpoints.cc, src/breakpoints.h, 
	src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/p16x7x.cc,
	src/p16x7x.h, src/packages.cc, src/pic-processor.h, src/processor.cc,
	src/processor.h, src/registers.cc, src/registers.h, src/ssp.cc,
	src/stimuli.cc, src/stimuli.h, src/uart.cc, modules/binary_indicator.cc,
	modules/binary_indicator.h, modules/led.cc, modules/led.h,
	modules/logic.cc, modules/logic.h, modules/paraface.cc,
	modules/paraface.h, modules/resistor.cc, modules/resistor.h,
	modules/usart.cc, modules/video.cc, modules/video.h:
	Rewrote the way stimuli are handled. Before, gpsim only used
	a single parameter (more or less) to represent the state of
	an stimulus. Now, two parameters are used. Currently, these
	parameters are designated as the voltage and impedance. Before,
	the single parameter was somewhat similar to a current.
	
2004-07-20 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: added input leakage modelling 
	to I/O pins.
	
2004-07-19 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor.cc, src/pic-processor.h, src/pic-registers.cc,
	src/processor.h, src/processor.cc, gui/gui_statusbar.cc, 
	gui/gui_stopwatch.cc, modules/usart.cc, cli/cmd_frequency.cc:
	Added new member functions to the Processor class to simplify
	handling time.

2004-07-17 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, src/src.vcproj, src/i2c-ee.cc:
	  small fixes for MSVC compilation

2004-07-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_statusbar.h, gui/gui_statusbar.cc: Now the status bar can
	accept an arbitrary of registers to display.
	* src/16bit-processors.cc, src/processor.h: Added BSR to the list
	of registers viewable in the status bar.
	* cli/cmd_trace.cc, cli/cmd_trace.h, cli/parse.yy, src/trace.cc: The