@@ -1,3 +1,8 @@
+2004-07-24 Borut Razem <borut.razem@siol.net>
+	* plat/win32/gpsim.def: updated exports
+	* plat/win32/gpsim.nsi: don't cd when running gpsim
+	* doc/gpsimWin32.html: XHTML 1.0 compliant, snapshots at a separate page
+
 2004-07-22 Scott Dattalo <scott@dattalo.com>
 	* src/stimuli.cc, modules/resistor.cc, modules/resistor.h:
 	Bug fixes to the recent I/O pin redesign
